# rust-roguelike

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: main.rs
core/src/application/: events.rs  game_loop.rs
core/src/core/: types.rs
core/src/debug_data/: mod.rs
core/src/domain/: mod.rs  world.rs  world_position.rs
core/src/domain/entity/: ai.rs  equipment.rs  mod.rs  types.rs
core/src/prefabs/: dungeon_environment.rs  goblins.rs
core/src/ui/: macroquad_adapter.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/application/: events.rs  game_loop.rs  mod.rs
engine/src/core/: types.rs
engine/src/domain/: world.rs  world_position.rs
engine/src/domain/entity/: ai.rs  attributes.rs  combat.rs  equipment.rs  mod.rs  types.rs
engine/src/prefabs/: dungeon_environment.rs  mod.rs
src/: game.rs  main.rs
src/application/: events.rs  game_loop.rs  turns.rs
src/core/: types.rs
src/debug_data/: basic_level.rs
src/domain/: entity.rs  world.rs  world_position.rs
src/domain/entity/: attributes.rs  combat.rs  equipment.rs  mod.rs  types.rs
src/prefabs/: dungeon_environment.rs  goblins.rs
src/systems/: animation.rs  event.rs  mod.rs  turn_manager.rs
src/systems/ai/: mod.rs
src/ui/: camera.rs  input_handler.rs  macroquad_adapter.rs  menu.rs  mod.rs  renderer.rs  types.rs
src/world/: entity.rs  mod.rs  position.rs
tauri/: package-lock.json  package.json
tauri/src/: App.tsx  api.ts  bindings.ts  main.tsx
tauri/src-tauri/: Cargo.toml
tauri/src-tauri/src/: lib.rs
tauri/src/components/: GameRenderer.tsx
