[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "^10.0.0" }

[dependencies]
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
ts-rs = "10.1.0"
specta = "2.0.0-rc.22"
tauri-specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
