[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "^10.0.0" }

[dependencies]
tauri = { version = "2", features = ["specta"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
engine = { path = "../../engine" }
ts-rs = "10.1.0"
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
